Feature: list type query api complete
