# docs/swagger.json
@@ -39,6 +39,7 @@
                         "in": "query"
                     },
                     {
+                        "minLength": 1,
                         "type": "string",
                         "description": "名单类型编码",
                         "name": "code",
@@ -58,6 +59,13 @@
                         "default": 10,
                         "description": "分页大小",
                         "name": "page_size",
+                        "in": "query"
+                    },
+                    {
+                        "minLength": 1,
+                        "type": "string",
+                        "description": "排序方式",
+                        "name": "sorted_field",
                         "in": "query"
                     }
                 ],
